--- a/app/src/main/res/layout/activity_datos_otro.xml
+++ b/app/src/main/res/layout/activity_datos_otro.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/Btn3aldia"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".DatosOtro">
@@ -75,5 +76,36 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.976" />
+
+    <LinearLayout
+        android:layout_width="188dp"
+        android:layout_height="180dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.737"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.754">
+
+        <Button
+            android:id="@+id/Btn2aldia"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="2 al dia " />
+
+        <Button
+            android:id="@+id/Btn3aldia"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="3 al dia (Recomendado)" />
+
+        <Button
+            android:id="@+id/Btn3aldia"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="4 al dia" />
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
